fix: Fixed inconsistent left drawer expansion/collapse behavior (#1903)
- Adjusted the left drawer component to function properly on screens with a width of 820px or less.
- Ensured smooth expansion and collapse of the left drawer when clicked.
- Ensured the overflow-y of content is handled in smaller screens.
- Modified the changes for organization dashboard screens to match the superadmin screens when the left drawer is collapsed.
- Covered the changes with tests.
- Ensured no other functionality got affected.

--- a/src/components/LeftDrawerOrg/LeftDrawerOrg.module.css
+++ b/src/components/LeftDrawerOrg/LeftDrawerOrg.module.css
@@ -61,6 +61,7 @@
 
 .leftDrawer .optionList {
   height: 100%;
+  overflow-y: auto;
 }
 
 .leftDrawer .optionList button {
